--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main>
-        <iframe src="https://bjornbronsk.grafana.net/d-solo/b1c7078f-fa27-48a4-8249-fbd42e536b5c/grafanapoc?orgId=1&from=1692683066792&to=1692704666792&panelId=1" width="450" height="200" frameborder="0"></iframe>
+        <iframe src="https://bjornbronsk.grafana.net/d-solo/b1c7078f-fa27-48a4-8249-fbd42e536b5c/grafanapoc?orgId=1&from=1692683066792&to=1692704666792&panelId=1"  frameborder="0"></iframe>
     </main>
   </body>
 </html>
